<resources>
    <string name="app_name">Shine Group</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Registered Email</string>
    <string name="prompt_password">Registered Mobile Number</string>
    <string name="action_sign_in">Login Securely</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This number is too short</string>
    <string name="error_incorrect_password">This number is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Shine </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_item_chat">Chat</string>
    <string name="nav_item_news">Feeds</string>
    <string name="nav_item_profile">Profile</string>
    <string name="nav_item_settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="user_name">Please update your Name</string>
    <string name="user_email">Email</string>
    <string name="nav_logout">Logout</string>


    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="err_msg_name">Enter full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="title_activity_chat_room_discussion">ChatRoomDiscussionActivity</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_mmmmmm">mmmmmm</string>
</resources>
